--- a/style.css
+++ b/style.css
@@ -4,7 +4,15 @@
     box-sizing:border-box;
 }
 
+.container{
+    max-width:1170px;
+    margin:0 auto;
+    display:flex;
+    flex-wrap:wrap;
+}
+
 .card{
+    width:calc(100% / 5);
     display:flex;
     flex-direction:column;
 }
