--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
     box-sizing:border-box;
 }
 
+header{
+    background-color: #2e3a46;
+    display:flex;
+    width:100%;
+    padding:10px;
+}
+
+header img{
+    width:50px;
+}
+
 .container{
     max-width:1170px;
     margin:0 auto;
