--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ header img{
 }
 
 .container{
+    /*background-color: #1e2d3b;*/
     max-width:1170px;
     margin:0 auto;
     display:flex;
@@ -26,4 +27,5 @@ header img{
     width:calc(100% / 5);
     display:flex;
     flex-direction:column;
+    /*color:white;*/
 }
